documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.VB

    Public Declare Function L71_BCSchedIntCondEx Lib "L71W32.DLL" Alias "_L71_BCSchedIntCondEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal tagval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedMsg Lib "L71W32.DLL" Alias "_L71_BCSchedMsg@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedNop Lib "L71W32.DLL" Alias "_L71_BCSchedNop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedPause Lib "L71W32.DLL" Alias "_L71_BCSchedPause@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedPulse Lib "L71W32.DLL" Alias "_L71_BCSchedPulse@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedPulse0 Lib "L71W32.DLL" Alias "_L71_BCSchedPulse0@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedPulse1 Lib "L71W32.DLL" Alias "_L71_BCSchedPulse1@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedRestart Lib "L71W32.DLL" Alias "_L71_BCSchedRestart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedRetry Lib "L71W32.DLL" Alias "_L71_BCSchedRetry@12" (ByVal condition As UInt16, ByVal retries As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedRetryEx Lib "L71W32.DLL" Alias "_L71_BCSchedRetryEx@24" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal retryflag As UInt16, ByVal retries As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedReturn Lib "L71W32.DLL" Alias "_L71_BCSchedReturn@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedUser Lib "L71W32.DLL" Alias "_L71_BCSchedUser@8" (ByVal useraddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSetEntry Lib "L71W32.DLL" Alias "_L71_BCSetEntry@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSetTimeout Lib "L71W32.DLL" Alias "_L71_BCSetTimeout@8" (ByVal timeoutval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BlkAddr Lib "L71W32.DLL" Alias "_L71_BlkAddr@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_BlkOptRd Lib "L71W32.DLL" Alias "_L71_BlkOptRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_BlkOptWr Lib "L71W32.DLL" Alias "_L71_BlkOptWr@12" (ByVal rtopt As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BlkPtrRd Lib "L71W32.DLL" Alias "_L71_BlkPtrRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L71_BlkPtrWr Lib "L71W32.DLL" Alias "_L71_BlkPtrWr@12" (ByVal descaddr As UInt32, ByVal taval As Int32, ByVal handleval As UInt32)
    Public Declare Function L71_BlkRd Lib "L71W32.DLL" Alias "_L71_BlkRd@12" (ByRef block As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BlkReset Lib "L71W32.DLL" Alias "_L71_BlkReset@8" (ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BlkSWDRd Lib "L71W32.DLL" Alias "_L71_BlkSWDRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_BlkSWDWr Lib "L71W32.DLL" Alias "_L71_BlkSWDWr@12" (ByVal swdval As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BlkWipe Lib "L71W32.DLL" Alias "_L71_BlkWipe@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BlkWr Lib "L71W32.DLL" Alias "_L71_BlkWr@12" (ByRef block As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CardBoot Lib "L71W32.DLL" Alias "_L71_CardBoot@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CardCloseAll Lib "L71W32.DLL" Alias "_L71_CardCloseAll@0" () As Int32
    Public Declare Function L71_CardConfig Lib "L71W32.DLL" Alias "_L71_CardConfig@16" (ByVal enableflag As Int32, ByVal command As UInt16, ByVal taval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CardGetInfo Lib "L71W32.DLL" Alias "_L71_CardGetInfo@8" (ByVal infotype As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_CardGetInfoEx Lib "L71W32.DLL" Alias "_L71_CardGetInfoEx@20" (ByRef bufmodel As UInt16, ByVal bufmodelcount As UInt16, ByRef buffeature As UInt16, ByVal buffeaturecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub L71_CardInit Lib "L71W32.DLL" Alias "_L71_CardInit@0" ()
    Public Declare Function L71_CardIsRunning Lib "L71W32.DLL" Alias "_L71_CardIsRunning@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CardNop Lib "L71W32.DLL" Alias "_L71_CardNop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CardNopEx Lib "L71W32.DLL" Alias "_L71_CardNopEx@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CardOpenEx Lib "L71W32.DLL" Alias "_L71_CardOpenEx@8" (ByRef cardname As String, ByVal cardnum As Int32) As UInt32
    Public Declare Function L71_CardOpenExx Lib "L71W32.DLL" Alias "_L71_CardOpenExx@16" (ByRef cardname As String, ByVal cardnum As Int32, ByVal happwnd As IntPtr, ByVal uiremovalmsg As UInt16) As UInt32
    Public Declare Sub L71_CardResetEx Lib "L71W32.DLL" Alias "_L71_CardResetEx@4" (ByVal handleval As UInt32)
    Public Declare Function L71_CardResume Lib "L71W32.DLL" Alias "_L71_CardResume@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CardTest Lib "L71W32.DLL" Alias "_L71_CardTest@8" (ByVal level As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CardTest0 Lib "L71W32.DLL" Alias "_L71_CardTest0@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CardTest1 Lib "L71W32.DLL" Alias "_L71_CardTest1@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CardTest2 Lib "L71W32.DLL" Alias "_L71_CardTest2@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CardTest3 Lib "L71W32.DLL" Alias "_L71_CardTest3@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub L71_CardTrigger Lib "L71W32.DLL" Alias "_L71_CardTrigger@4" (ByVal handleval As UInt32)
    Public Declare Function L71_CFGRdL Lib "L71W32.DLL" Alias "_L71_CFGRdL@8" (ByVal addrval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L71_CFGWrL Lib "L71W32.DLL" Alias "_L71_CFGWrL@12" (ByVal value As UInt32, ByVal addrval As Int32, ByVal handleval As UInt32)
    Public Declare Function L71_CmdAddr Lib "L71W32.DLL" Alias "_L71_CmdAddr@8" (ByVal index As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_CmdAlloc Lib "L71W32.DLL" Alias "_L71_CmdAlloc@8" (ByVal count As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_CmdAllocEx Lib "L71W32.DLL" Alias "_L71_CmdAllocEx@12" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_CmdBaseRd Lib "L71W32.DLL" Alias "_L71_CmdBaseRd@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Sub L71_CmdBaseWr Lib "L71W32.DLL" Alias "_L71_CmdBaseWr@8" (ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L71_CmdClear Lib "L71W32.DLL" Alias "_L71_CmdClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CmdCountRd Lib "L71W32.DLL" Alias "_L71_CmdCountRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_CmdCountWr Lib "L71W32.DLL" Alias "_L71_CmdCountWr@8" (ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_CmdCtrlRd Lib "L71W32.DLL" Alias "_L71_CmdCtrlRd@8" (ByVal index As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_CmdCtrlWr Lib "L71W32.DLL" Alias "_L71_CmdCtrlWr@12" (ByVal ctrlval As UInt16, ByVal index As Int32, ByVal handleval As UInt32)
    Public Declare Function L71_CmdCurrRd Lib "L71W32.DLL" Alias "_L71_CmdCurrRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_CmdCurrWr Lib "L71W32.DLL" Alias "_L71_CmdCurrWr@8" (ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L71_CmdInit Lib "L71W32.DLL" Alias "_L71_CmdInit@8" (ByVal opcode As UInt16, ByRef block As UInt16)
    Public Declare Function L71_CmdInsert Lib "L71W32.DLL" Alias "_L71_CmdInsert@8" (ByRef block As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CmdMaxRd Lib "L71W32.DLL" Alias "_L71_CmdMaxRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_CmdMaxWr Lib "L71W32.DLL" Alias "_L71_CmdMaxWr@8" (ByVal count As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_CmdRd Lib "L71W32.DLL" Alias "_L71_CmdRd@12" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CmdShotWr Lib "L71W32.DLL" Alias "_L71_CmdShotWr@12" (ByVal value As Int32, ByVal index As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CmdSkipWr Lib "L71W32.DLL" Alias "_L71_CmdSkipWr@12" (ByVal value As Int32, ByVal index As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub L71_CmdStackClr Lib "L71W32.DLL" Alias "_L71_CmdStackClr@4" (ByVal handleval As UInt32)
    Public Declare Function L71_CmdStartRd Lib "L71W32.DLL" Alias "_L71_CmdStartRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_CmdStartWr Lib "L71W32.DLL" Alias "_L71_CmdStartWr@8" (ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_CmdTotalRd Lib "L71W32.DLL" Alias "_L71_CmdTotalRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub L71_CmdTotalWr Lib "L71W32.DLL" Alias "_L71_CmdTotalWr@8" (ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Function L71_CmdWr Lib "L71W32.DLL" Alias "_L71_CmdWr@12" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CommCall Lib "L71W32.DLL" Alias "_L71_CommCall@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CommCheck Lib "L71W32.DLL" Alias "_L71_CommCheck@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CommDisable Lib "L71W32.DLL" Alias "_L71_CommDisable@8" (ByVal command As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CommDisableEx Lib "L71W32.DLL" Alias "_L71_CommDisableEx@8" (ByVal command As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CommEnable Lib "L71W32.DLL" Alias "_L71_CommEnable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CommRdL Lib "L71W32.DLL" Alias "_L71_CommRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_CommRdsW Lib "L71W32.DLL" Alias "_L71_CommRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CommRdW Lib "L71W32.DLL" Alias "_L71_CommRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_CommRun Lib "L71W32.DLL" Alias "_L71_CommRun@20" (ByRef dataptr As UInt16, ByVal datacount As UInt16, ByRef codeptr As UInt16, ByVal codecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub L71_CommWrL Lib "L71W32.DLL" Alias "_L71_CommWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L71_CommWrsW Lib "L71W32.DLL" Alias "_L71_CommWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
